# oop-team-10-hackathon

./: DECISIONS.md  README.md  mock_initial.json  mock_update.json  package-lock.json  package.json  server.js
.claude/: launch.json
.cursor/plans/: snomed_grep_tool_for_gemma_a0d5e070.plan.md
.cursor/rules/: plan.mdc
meta-wearables-dat-android-main/: install-skills.sh
mobile_app/: README.md  build.gradle.kts  settings.gradle.kts
mobile_app/app/: build.gradle.kts
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/com/example/oop/: MainActivity.kt
mobile_app/app/src/main/java/com/example/oop/audio/: AudioCapture.kt  BluetoothScoRouter.kt  UtteranceChunker.kt
mobile_app/app/src/main/java/com/example/oop/chat/: CameraPhoto.kt  ChatViewModel.kt
mobile_app/app/src/main/java/com/example/oop/chat/model/: ChatMessage.kt
mobile_app/app/src/main/java/com/example/oop/chat/mvi/: ChatEffect.kt  ChatIntent.kt  ChatUiState.kt  ClassifiedCaption.kt
mobile_app/app/src/main/java/com/example/oop/llm/: LiteRtLmEngine.kt  ModelDownloader.kt  ModelPaths.kt  TokenStore.kt
mobile_app/app/src/main/java/com/example/oop/ontology/: AisSeverity.kt  InstallState.kt  OntologyIndex.kt  OntologyInstaller.kt  OntologyMatch.kt  OntologyPaths.kt  OntologyUnavailableException.kt  TriggerIndex.kt  TriggerOntology.kt
mobile_app/app/src/main/java/com/example/oop/stream/: CaptureSummary.kt  PresentationQueue.kt  StreamUiState.kt  StreamViewModel.kt  YuvToBitmapConverter.kt
mobile_app/app/src/main/java/com/example/oop/transcription/: TranscriptUtterance.kt  TranscriptionService.kt
mobile_app/app/src/main/java/com/example/oop/ui/: AppScaffold.kt
mobile_app/app/src/main/java/com/example/oop/wearables/: README.md  WearablesConfig.kt  WearablesServiceLocator.kt  WearablesUiState.kt  WearablesViewModel.kt
mobile_app/app/src/main/java/com/example/oop/whisper/: WhisperEngine.kt  WhisperModelDownloader.kt  WhisperPaths.kt
mobile_app/app/src/main/res/raw/: ais_codes.txt  ontology_manifest.json  triggers.txt
mobile_app/app/src/main/res/values/: strings.xml  themes.xml
mobile_app/app/src/main/res/values-night/: themes.xml
mobile_app/app/src/main/res/xml/: file_paths.xml
mobile_app/app/src/test/java/com/example/oop/wearables/: IdMintingTest.kt  VitalSummariesTest.kt
mobile_app/gradle/wrapper/: gradle-wrapper.properties
mobile_app/whisper-lib/: README.md  UPSTREAM_VERSION  build.gradle.kts
mobile_app/whisper-lib/src/main/java/com/whispercpp/whisper/: WhisperContext.kt  WhisperLib.kt
mobile_app/whisper-lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
pre-arrival-worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
pre-arrival-worker/src/: index.ts
public/: index.html
(+48 files in other folders)
